# chimp

./: .gitignore  Cargo.toml  README.md
benches/: chimp_bench.rs
datasets/: SSD_HDD_benchmarks.csv
datasets/influxdb2-sample-data/.github/workflows/: main.yml
datasets/influxdb2-sample-data/air-sensor-data/: air-sensor-data-annotated.csv  air-sensor-data.lp
datasets/influxdb2-sample-data/bird-migration-data/: bird-migration.csv
datasets/influxdb2-sample-data/bitcoin-price-data/: README.md  bitcoin-currentprice-annotated.csv  bitcoin-historical-annotated.csv  currentprice.json  currentprice.lp  postprocess.js
datasets/influxdb2-sample-data/noaa-ndbc-data/: active-stations.xml  latest-observations-annotated.csv  latest-observations.csv  latest-observations.lp  latest-observations.txt  postprocess.js
datasets/influxdb2-sample-data/usgs-earthquake-data/: README.md  all_week-annotated.csv  all_week.geojson  all_week.lp  postprocess.js
datasets/influxdb2-sample-data/usgs-earthquake-data/schemas/: chemical-explosion-schema.ndjson  earthquake-schema.ndjson  explosion-schema.ndjson  ice-quake-schema.ndjson
src/: aligned.rs  bitstream.rs  chimp.rs  chimpn.rs  gorilla.rs  lib.rs  main.rs
