[profile.release]
debug = true

[package]
name = "chimp_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "chimp_bench"
harness = false
